fix: hide y overflow

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,6 +2,7 @@
 
 body {
     min-width: 320px;
+    overflow-x: hidden;
 }
 
 :root {
